--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -16,14 +16,15 @@ notification.Datafile = CU
 
 log.list = SESSION WRITE READ INFO
 
-lucene.url = https://localhost.localdomain:8181
-lucene.populateBlockSize = 10000
-lucene.directory = ${HOME}/data/lucene
-lucene.backlogHandlerIntervalSeconds = 60
-lucene.enqueuedRequestIntervalSeconds = 3
+search.engine = lucene
+search.urls = https://localhost.localdomain:8181
+search.populateBlockSize = 10000
+search.directory = ${HOME}/data/search
+search.backlogHandlerIntervalSeconds = 60
+search.enqueuedRequestIntervalSeconds = 3
 # Configure this option to prevent certain entities being indexed
 # For example, remove Datafile and DatafileParameter
-!lucene.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
+!search.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
 
 !cluster = https://smfisher:8181
 
