--- a/src/main/config/run.properties.example
+++ b/src/main/config/run.properties.example
@@ -42,14 +42,15 @@ notification.Datafile = CU
 # Call logging setup
 log.list = SESSION WRITE READ INFO
 
-# Lucene
-lucene.url = https://localhost:8181
-lucene.populateBlockSize = 10000
-lucene.directory = ${HOME}/data/icat/lucene
-lucene.backlogHandlerIntervalSeconds = 60
-lucene.enqueuedRequestIntervalSeconds = 5
-# The entities to index with Lucene. For example, remove 'Datafile' and 'DatafileParameter' if the number of datafiles exceeds lucene's limit of 2^32 entries in an index
-!lucene.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
+# Search Engine
+search.engine = LUCENE
+search.urls = https://localhost:8181
+search.populateBlockSize = 10000
+search.directory = ${HOME}/data/icat/search
+search.backlogHandlerIntervalSeconds = 60
+search.enqueuedRequestIntervalSeconds = 5
+# The entities to index with the search engine. For example, remove 'Datafile' and 'DatafileParameter' if the number of datafiles exceeds lucene's limit of 2^32 entries in an index
+!search.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
 
 # List members of cluster
 !cluster = http://vm200.nubes.stfc.ac.uk:8080 https://smfisher:8181				
