--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.client</artifactId>
-			<version>4.11.1</version>
+			<version>4.11.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -137,12 +137,24 @@
 			<groupId>co.elastic.clients</groupId>
 			<artifactId>elasticsearch-java</artifactId>
 			<version>8.1.0</version>
-		  </dependency>
-		  <dependency>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.12.3</version>
-		  </dependency>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.measure</groupId>
+			<artifactId>unit-api</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>tech.units</groupId>
+			<artifactId>indriya</artifactId>
+			<version>2.1.3</version>
+		</dependency>
 
 	</dependencies>
 
@@ -237,6 +249,7 @@
 						<javax.net.ssl.trustStore>${javax.net.ssl.trustStore}</javax.net.ssl.trustStore>
 						<luceneUrl>${luceneUrl}</luceneUrl>
 						<elasticsearchUrl>${elasticsearchUrl}</elasticsearchUrl>
+						<opensearchUrl>${opensearchUrl}</opensearchUrl>
 					</systemPropertyVariables>
 					<testFailureIgnore>false</testFailureIgnore>
 				</configuration>
@@ -257,6 +270,7 @@
 						<searchEngine>${searchEngine}</searchEngine>
 						<luceneUrl>${luceneUrl}</luceneUrl>
 						<elasticsearchUrl>${elasticsearchUrl}</elasticsearchUrl>
+						<opensearchUrl>${opensearchUrl}</opensearchUrl>
 					</systemPropertyVariables>
 				</configuration>
 				<executions>
@@ -338,6 +352,7 @@
 								<argument>${searchEngine}</argument>
 								<argument>${luceneUrl}</argument>
 								<argument>${elasticsearchUrl}</argument>
+								<argument>${opensearchUrl}</argument>
 							</arguments>
 						</configuration>
 						<goals>
