SearchApi and unit conversion refactors #267

--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -25,6 +25,7 @@ search.enqueuedRequestIntervalSeconds = 3
 # Configure this option to prevent certain entities being indexed
 # For example, remove Datafile and DatafileParameter
 !search.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
+units = \u2103: celsius degC, K: kelvin
 
 !cluster = https://smfisher:8181
 
