--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.utils</artifactId>
-			<version>4.16.1</version>
+			<version>4.16.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -131,29 +131,6 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
 			<version>4.3.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>co.elastic.clients</groupId>
-			<artifactId>elasticsearch-java</artifactId>
-			<version>8.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.12.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.measure</groupId>
-			<artifactId>unit-api</artifactId>
-			<version>2.1.3</version>
-		</dependency>
-
-		<dependency>
-			<groupId>tech.units</groupId>
-			<artifactId>indriya</artifactId>
-			<version>2.1.3</version>
 		</dependency>
 
 	</dependencies>
@@ -248,7 +225,6 @@
 					<systemPropertyVariables>
 						<javax.net.ssl.trustStore>${javax.net.ssl.trustStore}</javax.net.ssl.trustStore>
 						<luceneUrl>${luceneUrl}</luceneUrl>
-						<elasticsearchUrl>${elasticsearchUrl}</elasticsearchUrl>
 						<opensearchUrl>${opensearchUrl}</opensearchUrl>
 					</systemPropertyVariables>
 					<testFailureIgnore>false</testFailureIgnore>
@@ -269,7 +245,6 @@
 						<serverUrl>${serverUrl}</serverUrl>
 						<searchEngine>${searchEngine}</searchEngine>
 						<luceneUrl>${luceneUrl}</luceneUrl>
-						<elasticsearchUrl>${elasticsearchUrl}</elasticsearchUrl>
 						<opensearchUrl>${opensearchUrl}</opensearchUrl>
 					</systemPropertyVariables>
 				</configuration>
@@ -351,7 +326,6 @@
 								<argument>${serverUrl}</argument>
 								<argument>${searchEngine}</argument>
 								<argument>${luceneUrl}</argument>
-								<argument>${elasticsearchUrl}</argument>
 								<argument>${opensearchUrl}</argument>
 							</arguments>
 						</configuration>
