--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.client</artifactId>
-			<version>4.11.1</version>
+			<version>5.0.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
