--- a/pom.xml
+++ b/pom.xml
@@ -71,16 +71,16 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<version>7.0</version>
+			<groupId>jakarta.platform</groupId>
+			<artifactId>jakarta.jakartaee-api</artifactId>
+			<version>9.1.0</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.authentication</artifactId>
-			<version>4.6.0</version>
+			<version>5.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -99,14 +99,14 @@
 		<dependency>
 			<groupId>com.sun.xml.ws</groupId>
 			<artifactId>jaxws-rt</artifactId>
-			<version>2.3.0</version>
+			<version>3.0.2</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>jakarta.json</artifactId>
-			<version>1.1.5</version>
+			<version>2.0.1</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -125,7 +125,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.client</artifactId>
-			<version>5.0.0</version>
+			<version>6.0.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
