Remove use of ServletFileUpload which depends on javax.servlet.http.HttpServletRequest

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,8 @@
 		</init-param>
 
 		<load-on-startup>1</load-on-startup>
+
+		<multipart-config></multipart-config>
 	</servlet>
 
 	<servlet-mapping>
