Test Actions with results num test change

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - master
       - mr-actions-test-new-lucene
+      - mr-actions-test-results-test
 
 jobs:
   build_and_tests:
