--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -85,7 +85,7 @@ jobs:
         run: mvn test -B
 
       - name: Run Integration Tests
-        run: mvn -Be failsafe:integration-test
+        run: mvn failsafe:integration-test -Be
 
       - name: After Failure
         if: ${{ failure() }}
