--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -79,7 +79,7 @@ jobs:
         run: |
           grep payara ~/.bash_profile > payara_path_command
           source payara_path_command
-          mvn install -DskipTests
+          mvn install
 
       - name: Run Unit Tests
         run: mvn test -B
