--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -85,7 +85,7 @@ jobs:
         run: mvn test -B
 
       - name: Run Integration Tests
-        run: mvn verify -B
+        run: mvn failsafe:verify -B
 
       - name: After Failure
         if: ${{ failure() }}
