--- a/src/main/config/logback.xml.example
+++ b/src/main/config/logback.xml.example
@@ -3,14 +3,11 @@
 	<appender name="FILE"
 		class="ch.qos.logback.core.rolling.RollingFileAppender">
 		<file>${HOME}/logs/icat.log</file>
-		<rollingPolicy class="ch.qos.logback.core.rolling.TimeBasedRollingPolicy">
+		<rollingPolicy class="ch.qos.logback.core.rolling.SizeAndTimeBasedRollingPolicy">
 			<fileNamePattern>${HOME}/logs/icat.log.%d{yyyy-MM-dd}.%i.zip
 			</fileNamePattern>
+			<maxFileSize>100MB</maxFileSize>
 			<maxHistory>30</maxHistory>
-			<timeBasedFileNamingAndTriggeringPolicy
-				class="ch.qos.logback.core.rolling.SizeAndTimeBasedFNATP">
-				<maxFileSize>100MB</maxFileSize>
-			</timeBasedFileNamingAndTriggeringPolicy>
 		</rollingPolicy>
 
 		<encoder>
