Add utility to population and timed aggregation #267

--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -22,6 +22,7 @@ search.populateBlockSize = 10000
 search.directory = ${HOME}/data/search
 search.backlogHandlerIntervalSeconds = 60
 search.enqueuedRequestIntervalSeconds = 3
+search.aggregateFilesIntervalSeconds = 3600
 # Configure this option to prevent certain entities being indexed
 # For example, remove Datafile and DatafileParameter
 !search.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
