--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -23,6 +23,7 @@ search.directory = ${HOME}/data/search
 search.backlogHandlerIntervalSeconds = 60
 search.enqueuedRequestIntervalSeconds = 3
 search.aggregateFilesIntervalSeconds = 3600
+search.maxSearchTimeSeconds = 5
 # Configure this option to prevent certain entities being indexed
 # For example, remove Datafile and DatafileParameter
 !search.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
