--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -16,6 +16,7 @@ notification.Datafile = CU
 
 log.list = SESSION WRITE READ INFO
 
+# LUCENE, OPENSEARCH and ELASTICSEARCH engines are supported, however the latter two are considered experimental
 search.engine = lucene
 search.urls = https://localhost.localdomain:8181
 search.populateBlockSize = 10000
