--- a/src/main/config/setup.properties.example
+++ b/src/main/config/setup.properties.example
@@ -22,8 +22,7 @@ port           = 4848
 !db.logging     = FINE
 
 # MySQL
-db.driver      = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-!db.driver     = mysql-connector-java-5.1.30-bin.jar_com.mysql.jdbc.Driver_5_1
+db.driver      = com.mysql.cj.jdbc.MysqlDataSource
 db.url         = jdbc:mysql://localhost:3306/icat
 db.username    = icat
 db.password    = secret
