--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -20,8 +20,8 @@ log.list = SESSION WRITE READ INFO
 search.engine = lucene
 search.urls = https://localhost.localdomain:8181
 search.populateBlockSize = 10000
-# Recommend setting lucene.searchBlockSize equal to maxIdsInQuery, so that all Lucene results can be authorised at once
-# If lucene.searchBlockSize > maxIdsInQuery, then multiple auth checks may be needed for a single search to Lucene
+# Recommend setting search.searchBlockSize equal to maxIdsInQuery, so that all results can be authorised at once
+# If search.searchBlockSize > maxIdsInQuery, then multiple auth checks may be needed for a single search
 # The optimal value depends on how likely a user's auth request fails: larger values are more efficient when rejection is more likely
 search.searchBlockSize = 1000
 search.directory = ${HOME}/data/search
