Special handling for InvestigationInstrument facets #267

--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -30,8 +30,9 @@ search.enqueuedRequestIntervalSeconds = 3
 search.aggregateFilesIntervalSeconds = 3600
 search.maxSearchTimeSeconds = 5
 # Configure this option to prevent certain entities being indexed
-# For example, remove Datafile and DatafileParameter
-!search.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
+# For example, remove Datafile and DatafileParameter if these are not of interest
+# Note then when commented out, the full set of all possible entities will be indexed - to disable all search functionality, instead comment out search.engine or search.urls
+!search.entitiesToIndex = Datafile DatafileFormat DatafileParameter Dataset DatasetParameter DatasetType DatasetTechnique Facility Instrument InstrumentScientist Investigation InvestigationInstrument InvestigationParameter InvestigationType InvestigationUser ParameterType Sample SampleType SampleParameter User
 units = \u2103: celsius degC, K: kelvin
 
 !cluster = https://smfisher:8181
