Revert accidental deletion of Facility setters #267

--- a/src/main/config/run.properties.example
+++ b/src/main/config/run.properties.example
@@ -56,8 +56,10 @@ search.backlogHandlerIntervalSeconds = 60
 search.enqueuedRequestIntervalSeconds = 5
 search.aggregateFilesIntervalSeconds = 3600
 search.maxSearchTimeSeconds = 5
-# The entities to index with the search engine.
-!search.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
+# Configure this option to prevent certain entities being indexed
+# For example, remove Datafile and DatafileParameter if these are not of interest
+# Note then when commented out, the full set of all possible entities will be indexed - to disable all search functionality, instead comment out search.engine or search.urls
+!search.entitiesToIndex = Datafile DatafileFormat DatafileParameter Dataset DatasetParameter DatasetType DatasetTechnique Facility Instrument InstrumentScientist Investigation InvestigationInstrument InvestigationParameter InvestigationType InvestigationUser ParameterType Sample SampleType SampleParameter User
 
 # List members of cluster
 !cluster = http://vm200.nubes.stfc.ac.uk:8080 https://smfisher:8181				
