--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,7 @@
 			<groupId>jakarta.platform</groupId>
 			<artifactId>jakarta.jakartaee-api</artifactId>
 			<version>10.0.0</version>
-			<!-- miredot-plugin needs this on the runtime classpath -->
-			<!-- <scope>provided</scope> -->
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -160,7 +159,7 @@
 			<plugin>
 				<groupId>com.qmino</groupId>
 				<artifactId>miredot-plugin</artifactId>
-				<version>2.4.3-Java11</version>
+				<version>2.4.4-Java11</version>
 				<executions>
 					<execution>
 						<id>miredot</id>
