Use icat-6.1 branch of icat-ansible in CI

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           repository: icatproject-contrib/icat-ansible
           path: icat-ansible
+          ref: icat-6.1
       - name: Install Ansible
         run: pip install -r icat-ansible/requirements.txt
 
