--- a/pom.xml
+++ b/pom.xml
@@ -113,13 +113,13 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.utils</artifactId>
-			<version>4.17.0-SNAPSHOT</version>
+			<version>4.17.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.client</artifactId>
-			<version>6.1.0-SNAPSHOT</version>
+			<version>6.1.0</version>
 			<scope>test</scope>
 		</dependency>
 
